--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_close.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_close.scss
@@ -1,6 +1,8 @@
 .close {
   float: right;
+
   @include font-size($close-font-size);
+
   font-weight: $close-font-weight;
   line-height: 1;
   color: $close-color;
@@ -14,7 +16,7 @@
     text-decoration: none;
   }
 
-  &:not(:disabled):not(.disabled) {
+  &:not(:disabled, .disabled) {
     &:hover,
     &:focus {
       opacity: .75;
