--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_main-header.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_main-header.scss
@@ -160,10 +160,7 @@
 .navbar-search-block {
   position: absolute;
   padding: 0 $nav-link-padding-x;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   z-index: 10;
   display: none;
   justify-content: center;
