--- a/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_mailbox.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_mailbox.scss
@@ -41,7 +41,8 @@
 }
 
 .mailbox-attachments {
-  @include list-unstyled ();
+  @include list-unstyled;
+
   li {
     border: 1px solid #eee;
     float: left;
