--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_alerts.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_alerts.scss
@@ -35,7 +35,7 @@
   }
 }
 
-@include dark-mode () {
+@include dark-mode {
   @each $color, $value in $theme-colors-alt {
     .alert-#{$color} {
       color: color-contrast($value);
