--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_forms.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_forms.scss
@@ -15,6 +15,7 @@
       border: 0;
       cursor: pointer;
       font-size: 1rem;
+
       // margin-top: -3px;
       padding: $input-btn-padding-y $input-btn-padding-x;
       position: absolute;
@@ -107,12 +108,13 @@
 }
 /* stylelint-enable selector-class-pattern */
 
-label:not(.form-check-label):not(.custom-file-label) {
+label:not(.form-check-label, .custom-file-label) {
   font-weight: $font-weight-bold;
 }
 
 .warning-feedback {
   @include font-size($form-feedback-font-size);
+
   color: map-get($theme-colors, "warning");
   display: none;
   margin-top: $form-feedback-margin-top;
@@ -122,6 +124,7 @@ label:not(.form-check-label):not(.custom-file-label) {
 .warning-tooltip {
   @include border-radius($form-feedback-tooltip-border-radius);
   @include font-size($form-feedback-tooltip-font-size);
+
   background-color: rgba(map-get($theme-colors, "warning"), $form-feedback-tooltip-opacity);
   color: color-contrast(map-get($theme-colors, "warning"));
   display: none;
@@ -229,6 +232,7 @@ textarea.form-control {
   &:checked {
     ~ .custom-control-label::before {
       @include gradient-bg(lighten(map-get($theme-colors, "warning"), 10%));
+
       border-color: lighten(map-get($theme-colors, "warning"), 10%);
     }
   }
@@ -285,6 +289,7 @@ body.text-sm {
     &.border-width-2 {
       border-bottom-width: 2px;
     }
+
     &.border-width-3 {
       border-bottom-width: 3px;
     }
@@ -327,6 +332,7 @@ body.text-sm {
     background-color: transparent !important;
     box-shadow: none;
   }
+
   &:checked ~ .custom-control-label::before {
     @include gradient-bg(transparent);
   }
@@ -339,10 +345,12 @@ body.text-sm {
     border: 1px solid lighten($sidebar-dark-bg, 15%);
     color: lighten(color-contrast(lighten($sidebar-dark-bg, 5%)), 15%);
   }
+
   .btn-navbar {
     &:hover {
       background-color: lighten($sidebar-dark-bg, 7.5%);
     }
+
     &:focus {
       background-color: lighten($sidebar-dark-bg, 10%);
     }
@@ -359,8 +367,8 @@ body.text-sm {
   }
 }
 
-@include dark-mode () {
-  .form-control:not(.form-control-navbar):not(.form-control-sidebar),
+@include dark-mode {
+  .form-control:not(.form-control-navbar, .form-control-sidebar),
   .custom-select,
   .custom-file-label,
   .custom-file-label::after,
@@ -369,11 +377,13 @@ body.text-sm {
     background-color: $dark;
     color: $white;
   }
-  .form-control:not(.form-control-navbar):not(.form-control-sidebar):not(.is-invalid):not(:focus),
+
+  .form-control:not(.form-control-navbar, .form-control-sidebar, .is-invalid, :focus),
   .custom-file-label,
   .custom-file-label::after {
     border-color: $gray-600;
   }
+
   select {
     background-color: $dark;
     color: $white;
@@ -415,9 +425,11 @@ body.text-sm {
     &::-webkit-slider-runnable-track {
       background-color: lighten($dark, 7.5%);
     }
+
     &::-moz-range-track {
       background-color: lighten($dark, 7.5%);
     }
+
     &::-ms-track {
       background-color: lighten($dark, 7.5%);
     }
