--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_modals.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_modals.scss
@@ -7,16 +7,14 @@
   .overlay {
     display: flex;
     position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
+    inset: 0;
     margin: -$modal-content-border-width;
     z-index: ($zindex-modal + 2);
     justify-content: center;
     align-items: center;
     background-color: rgba($black, .7);
     color: darken($gray-600, 2.5%);
+
     @include border-radius($modal-content-border-radius);
   }
 }
@@ -43,11 +41,12 @@
   }
 }
 
-@include dark-mode () {
+@include dark-mode {
   .modal-header,
   .modal-footer {
     border-color: $gray-600;
   }
+
   .modal-content {
     background-color: $dark;
 
@@ -56,6 +55,7 @@
       .modal-footer {
         border-color: $gray-600;
       }
+
       .close {
         color: $dark !important;
         text-shadow: 0 1px 0 $gray-700 !important;
