--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_preloader.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_preloader.scss
@@ -14,7 +14,7 @@
   z-index: $zindex-preloader;
 }
 
-@include dark-mode () {
+@include dark-mode {
   .preloader {
     background-color: $dark-main-bg;
     color: $white;
