--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_products.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_products.scss
@@ -8,7 +8,7 @@
   padding: 0;
 
   > .item {
-    @include clearfix ();
+    @include clearfix;
 
     @if $enable-rounded {
       @include border-radius($border-radius);
@@ -47,6 +47,7 @@
 
 .product-list-in-card > .item {
   @include border-radius(0);
+
   border-bottom: 1px solid $card-border-color;
 
   &:last-of-type {
@@ -55,7 +56,7 @@
 }
 
 
-@include dark-mode () {
+@include dark-mode {
   .products-list > .item {
     background-color: $dark;
     color: $white;
