--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_root.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_root.scss
@@ -1,4 +1,4 @@
-@include dark-mode () {
+@include dark-mode {
   :root {
     // Custom variable values only support SassScript inside `#{}`.
     @each $color, $value in $colors-alt {
