--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_table.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_table.scss
@@ -85,12 +85,14 @@
   i.expandable-table-caret {
     transition: transform $transition-speed linear;
   }
+
   &[aria-expanded="true"] {
     i.expandable-table-caret {
       // stylelint-disable selector-max-attribute
       &[class*="right"] {
         transform: rotate(90deg);
       }
+
       &[class*="left"] {
         transform: rotate(-90deg);
       }
@@ -105,12 +107,14 @@
   i.expandable-table-caret {
     transition: transform $transition-speed linear;
   }
+
   [data-widget="expandable-table"] {
     i.expandable-table-caret {
       // stylelint-disable selector-max-attribute
       &[class*="right"] {
         transform: rotate(90deg);
       }
+
       &[class*="left"] {
         transform: rotate(-90deg);
       }
@@ -143,7 +147,7 @@
   }
 }
 
-@include dark-mode () {
+@include dark-mode {
   .table-bordered {
     &,
     td,
@@ -151,6 +155,7 @@
       border-color: $gray-600;
     }
   }
+
   .table-hover {
     tbody tr:hover {
       color: $gray-300;
@@ -158,14 +163,17 @@
       border-color: $gray-600;
     }
   }
+
   .table {
     thead th {
       border-bottom-color: $gray-600;
     }
+
     th,
     td {
       border-top-color: $gray-600;
     }
+
     &.table-head-fixed {
       thead tr:nth-child(1) th {
         background-color: lighten($dark, 5%);
