--- a/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/_variables.scss
@@ -10,7 +10,6 @@ $elasticms_light_blue: #00A7E2;
 $elasticms_dark_blue: #117bbb;
 $elasticms_lagoon: #00BCB1;
 $elasticms_green: #A5D13C;
-
 $blue: #0073b7 !default;
 $lightblue: #3c8dbc !default;
 $navy: #001f3f !default;
@@ -23,7 +22,6 @@ $purple: #605ca8 !default;
 $maroon: #d81b60 !default;
 $black: #111 !default;
 $gray-x-light: #d2d6de !default;
-
 $colors: map-merge(
   (
     "lightblue": $lightblue,
@@ -56,7 +54,6 @@ $boxed-layout-max-width: 1250px !default;
 
 // Body background (Affects main content background only)
 $main-bg: #fefeff !default;
-
 $dark-main-bg: lighten($dark, 7.5%) !important;
 
 // Content padding
@@ -91,13 +88,12 @@ $main-header-dark-form-control-focused-color: $gray-400 !default;
 $main-header-dark-form-control-border-color: $gray-600 !default;
 $main-header-dark-form-control-focused-border-color: $gray-600 !default;
 $main-header-dark-placeholder-color: rgba($white, .6) !default;
-
 $main-header-light-form-control-bg: darken($gray-200, 5%) !default;
 $main-header-light-form-control-focused-bg: darken($gray-200, 7.5%) !default;
 $main-header-light-form-control-focused-color: $gray-400 !default;
 $main-header-light-form-control-border-color: $gray-400 !default;
 $main-header-light-form-control-focused-border-color: darken($gray-400, 2.5%) !default;
-$main-header-light-placeholder-color: rgba(0, 0, 0, .6) !default;
+$main-header-light-placeholder-color: rgb(0 0 0 / 60%) !default;
 
 // MAIN FOOTER
 // --------------------------------------------------------
@@ -117,7 +113,7 @@ $main-footer-bg: $white !default;
 
 // Dark sidebar
 $sidebar-dark-bg: #33393f !default;
-$sidebar-dark-hover-bg: rgba(255, 255, 255, .1) !default;
+$sidebar-dark-hover-bg: rgb(255 255 255 / 10%) !default;
 $sidebar-dark-color: #c2c7d0 !default;
 $sidebar-dark-hover-color: $white !default;
 $sidebar-dark-active-color: $white !default;
@@ -126,7 +122,7 @@ $sidebar-dark-submenu-color: #c2c7d0 !default;
 $sidebar-dark-submenu-hover-color: $white !default;
 $sidebar-dark-submenu-hover-bg: $sidebar-dark-hover-bg !default;
 $sidebar-dark-submenu-active-color: $sidebar-dark-bg !default;
-$sidebar-dark-submenu-active-bg: rgba(255, 255, 255, .9) !default;
+$sidebar-dark-submenu-active-bg: rgb(255 255 255 / 90%) !default;
 
 // Light sidebar
 $sidebar-light-bg: $white !default;
@@ -155,7 +151,7 @@ $control-sidebar-width: $sidebar-width !default;
 // --------------------------------------------------------
 $card-border-color: $gray-100 !default;
 $card-dark-border-color: lighten($gray-900, 10%) !default;
-$card-shadow: 0 0 1px rgba(0, 0, 0, .125), 0 1px 3px rgba(0, 0, 0, .2) !default;
+$card-shadow: 0 0 1px rgb(0 0 0 / 12.5%), 0 1px 3px rgb(0 0 0 / 20%) !default;
 $card-title-font-size: 1.1rem !default;
 $card-title-font-size-sm: 1rem !default;
 $card-title-font-weight: $font-weight-normal !default;
@@ -200,7 +196,6 @@ $font-size-xl: ($font-size-base * 2) !default;
 $button-default-background-color: $gray-100 !default;
 $button-default-color: #444 !default;
 $button-default-border-color: #ddd !default;
-
 $button-padding-y-xs: .125rem !default;
 $button-padding-x-xs: .25rem !default;
 $button-line-height-xs: $line-height-sm !default;
@@ -244,9 +239,9 @@ $ribbon-xl-right: 4px !default;
 // CUSTOM FORM SELECT
 // --------------------------------------------------------
 
-$custom-select-dark-indicator-color:     $white !default;
-$custom-select-dark-indicator:           url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'><path fill='#{$custom-select-dark-indicator-color}' d='M2 0L0 2h4zm0 5L0 3h4z'/></svg>") !default;
-$custom-select-dark-background:          escape-svg($custom-select-dark-indicator) right $custom-select-padding-x center / $custom-select-bg-size no-repeat !default; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
+$custom-select-dark-indicator-color: $white !default;
+$custom-select-dark-indicator: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'><path fill='#{$custom-select-dark-indicator-color}' d='M2 0L0 2h4zm0 5L0 3h4z'/></svg>") !default;
+$custom-select-dark-background: escape-svg($custom-select-dark-indicator) right $custom-select-padding-x center / $custom-select-bg-size no-repeat !default; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
 
 // ENABLE DARK MODE
 // --------------------------------------------------------
