--- a/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_backgrounds.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_backgrounds.scss
@@ -18,8 +18,8 @@
         color: darken(color-contrast($color), 7.5%);
       }
 
-      &:not(:disabled):not(.disabled):active,
-      &:not(:disabled):not(.disabled).active,
+      &:not(:disabled, .disabled):active,
+      &:not(:disabled, .disabled).active,
       &:active,
       &.active {
         background-color: darken($color, 10%) !important;
@@ -37,8 +37,8 @@
     color: color-contrast($color);
 
     &.btn {
-      &:not(:disabled):not(.disabled):active,
-      &:not(:disabled):not(.disabled).active,
+      &:not(:disabled, .disabled):active,
+      &:not(:disabled, .disabled).active,
       .show > &.dropdown-toggle {
         background-image: none !important;
       }
@@ -49,8 +49,8 @@
         color: darken(color-contrast($color), 7.5%);
       }
 
-      &:not(:disabled):not(.disabled):active,
-      &:not(:disabled):not(.disabled).active,
+      &:not(:disabled, .disabled):active,
+      &:not(:disabled, .disabled).active,
       &:active,
       &.active {
         background: $color linear-gradient(180deg, mix($body-bg, darken($color, 10%), 15%), darken($color, 10%)) repeat-x !important;
