--- a/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_e-commerce.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_e-commerce.scss
@@ -4,7 +4,8 @@
 
 // product image
 .product-image {
-  @include img-fluid ();
+  @include img-fluid;
+
   width: 100%;
 }
 
@@ -28,7 +29,8 @@
   padding: $thumbnail-padding * 2;
 
   img {
-    @include img-fluid ();
+    @include img-fluid;
+
     align-self: center;
   }
 
