--- a/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_lockscreen.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/pages/_lockscreen.scss
@@ -34,6 +34,7 @@
 // Will contain the image and the sign in form
 .lockscreen-item {
   @include border-radius(4px);
+
   background-color: $white;
   margin: 10px auto 30px;
   padding: 0;
@@ -44,6 +45,7 @@
 // User image
 .lockscreen-image {
   @include border-radius(50%);
+
   background-color: $white;
   left: -10px;
   padding: 5px;
@@ -53,6 +55,7 @@
 
   > img {
     @include border-radius(50%);
+
     height: 70px;
     width: 70px;
   }
@@ -77,16 +80,19 @@
   margin-top: 10px;
 }
 
-@include dark-mode () {
+@include dark-mode {
   .lockscreen-item {
     background-color: $dark;
   }
+
   .lockscreen-logo a {
     color: $white;
   }
+
   .lockscreen-credentials .btn {
     background-color: $dark;
   }
+
   .lockscreen-image {
     background-color: $gray-600;
   }
