--- a/EMS/admin-ui-bundle/assets/css/core/components/media_library.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/components/media_library.scss
@@ -45,21 +45,21 @@ div.media-lib {
   display: flex;
   flex-direction: column;
   border: solid 1px #ddd;
-  color: #333333;
+  color: #333;
 
   .media-lib-container {
     background-color: #f5f5f5;
   }
 
   button[disabled], label[disabled] {
-    opacity: 100%;
+    opacity: 1;
     cursor: progress;
   }
 
   .btn {
-    border-color: #dddddd;
+    border-color: #ddd;
     & i { margin-right: 4px; }
-    &.btn-default { background-color: #FFFFFF; }
+    &.btn-default { background-color: #FFF; }
   }
 
   ul {
@@ -73,17 +73,15 @@ div.media-lib {
       display: flex;
       flex-wrap: wrap;
       border-bottom: 1px solid #DCDCDC;
-      column-gap: 8px;
-      row-gap: 8px;
+      gap: 8px 8px;
       padding: 8px;
     }
 
     ul.media-lib-list-breadcrumb {
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
+      flex-flow: row wrap;
       align-items: center;
-      background-color: #FFFFFF;
+      background-color: #FFF;
       border: 1px solid #DCDCDC;
       border-radius: 3px;
       padding: 0 10px;
@@ -103,7 +101,7 @@ div.media-lib {
       li:not(:last-child)::after {
         font-family: "Font Awesome 6 Free";
         content: fa-content($fa-var-angles-right);
-        color: #777777;
+        color: #777;
       }
     }
   }
@@ -160,7 +158,7 @@ div.media-lib {
                 font-family: "Font Awesome 6 Free";
                 content: fa-content($fa-var-angles-left);
                 margin-right: 8px;
-                color: #777777;
+                color: #777;
                 float: right;
               }
             }
@@ -183,7 +181,7 @@ div.media-lib {
           & > li {
             & > button.media-lib-link-folder {
               border-bottom: 1px solid #DCDCDC;
-              background-color: #FFFFFF;
+              background-color: #FFF;
 
               &:hover {
                 background-color: #d9edf7;
@@ -211,7 +209,7 @@ div.media-lib {
 
         &.media-lib-drop-area {
             //border: 2px solid $elasticms_light_blue;
-            background-color:  rgb(0, 167, 226, 0.1);
+            background-color:  rgb(0 167 226 / 10%);
         }
 
         ul.media-lib-list-uploads {
@@ -224,7 +222,7 @@ div.media-lib {
             background-color: #f5f5f5;
 
             div.core-js-progress {
-              background: #FFFFFF;
+              background: #FFF;
               padding: 8px;
               border-radius: 3px;
               border: 1px solid #DCDCDC;
@@ -258,18 +256,20 @@ div.media-lib {
 
     div.media-lib-load-more {
         &.show-load-more { display: flex; }
+
         display: none;
-        color: #777777;
+        color: #777;
         justify-content: center;
         align-items: center;
         column-gap: 8px;
-        padding: 16px 16px 64px 16px;
+        padding: 16px 16px 64px;
         font-weight: bold;
     }
   }
 
   div.media-lib-footer {
     flex-shrink: 0;
+
     & > div {
       border-top: 1px solid #DCDCDC;
       padding: 8px;
