--- a/EMS/admin-ui-bundle/assets/css/core/components/json_menu_nested.scss
+++ b/EMS/admin-ui-bundle/assets/css/core/components/json_menu_nested.scss
@@ -90,7 +90,11 @@
         padding: var(--jmn-gap);
         column-gap: var(--jmn-gap);
         flex-shrink: 0;
-        &:first-child { justify-content: flex-start; flex-shrink: 1; }
+
+        &:first-child {
+          justify-content: flex-start;
+          flex-shrink: 1;
+        }
     }
 
     .jmn-column {
