--- a/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_accent.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/mixins/_accent.scss
@@ -1,6 +1,6 @@
-$// Mixins: accent
+// Mixins: accent
 
-/* Accent Variant*/
+/* Accent Variant */
 @mixin accent-variant($name, $color) {
   $link-color: $color;
   .accent-#{$name} {
